<resources>
    <string name="app_name">Omni-Task</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="enter_modules">Enter modules</string>
    <string name="plan">Plan</string>
    <string name="clear">Clear</string>
    <string name="error_message">Please check entries! (Comma separated)</string>
    <string name="choose_indexes">Choose Indexes</string>
    <string name="choose_index_for_modules">Choose index for modules</string>
    <string name="close_bottom_sheet">Close bottom sheet</string>
    <string name="submit">Submit</string>
    <string name="untitled_timetable">Untitled timetable</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="save_timetable">Save timetable</string>
    <string name="close">Close</string>
    <string name="detail">Detail</string>
    <string name="no_description">No description</string>
    <string name="main_timetable">Main Timetable</string>
    <string name="tasks">Tasks</string>
    <string name="add_new_task">Add new task</string>
    <string name="add_task">Add Task</string>
    <string name="add_title">Add title</string>
    <string name="add_description">Add description</string>
    <string name="add_alarm">Add alarm</string>
    <string name="choose_class">Choose Class</string>
    <string name="add_priority">Add Priority</string>
    <string name="add_project">Add Project</string>
    <string name="priority_1">Priority 1</string>
    <string name="priority_2">Priority 2</string>
    <string name="priority_3">Priority 3</string>
    <string name="priority_4">Priority 4</string>
    <string name="choose_priority">Choose Priority</string>
    <string name="no_priority">No Priority</string>
    <string name="alarm_timing">Alarm timing</string>
    <string name="confirm">Confirm</string>
    <string name="custom">Custom</string>
    <string name="saved_timetables">Saved timetables</string>
    <string name="about">About</string>
    <string name="is_main_timetable">Is main timetable</string>
    <string name="edit_timetable">Edit timetable</string>
    <string name="changes_saved">Changes saved</string>
    <string name="description_is_empty">Description is empty!</string>
    <string name="title_is_empty">Title is empty!</string>
    <string name="today">TODAY</string>
    <string name="day_view">Day view</string>
    <string name="three_day_view">3 day view</string>
    <string name="five_day_view">5 day view</string>
    <string name="close_new_task_dialog_message">Are you sure you want to discard this task?</string>
    <string name="keep_editing">Keep editing</string>
    <string name="discard">Discard</string>
    <string name="save_new_task_dialog_message">Do you want to save this task?</string>
    <string name="okay">Okay</string>
    <string name="no_main_timetable_dialog_message">You need a main timetable!</string>
    <string name="date_picker_dialog_saved_calendar_key">date_picker_dialog_saved_calendar</string>
    <string name="time_picker_dialog_saved_calendar_key">time_picker_dialog_saved_calendar</string>
    <string name="chosen_priority_level">Chosen priority level</string>
    <string name="has_alarm">Has alarm</string>
    <string name="task_detail">Task detail</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="task_detail_fragment_close_dialog_message">Are you sure that you want to discard changes to this task?</string>
    <string name="TASK_ENTITY_ID">task_entity_id</string>
    <string name="task_detail_fragment_delete_dialog_message">Are you sure that you want to delete this task?</string>
    <string name="task_deleted">Task deleted</string>
    <string name="delete">Delete</string>
    <string name="save_changes_dialog_message">Save changes to this task?</string>
    <string name="no_class_chosen">No class chosen</string>
    <string name="about_app_weblink"><a href="https://github.com/wRorsjakz/Omni-Task">https://github.com/wRorsjakz/Omni-Task</a></string>
    <string name="about_app_description">Omni-Task is an open source project under GNU General Public License v3.0 license.</string>
    <string name="omni_task_icon">Omni-Task icon</string>
    <string name="about_app_fragment_visit">Visit the repository in Github :</string>
    <string name="clear_class">Clear class</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_not_done">Mark as not done</string>
    <string name="EXTRA_INTENT_INFO_KEY">EXTRA_INTENT_INFO_KEY</string>
    <string name="notification_id_key">NOTIFICATION_ID_KEY</string>
    <string name="INTENT_MESSAGE_KEY">intent_message_key</string>
    <string name="all_tasks_completed">All tasks completed</string>
    <string name="completed_tasks">Completed tasks</string>
    <string name="add_new_project">Add new project</string>

    <!-- Second Activity intent extras KEY -->
    <string name="SECOND_ACTIVITY_INTENT_KEY">second_activity_intent_key</string>

    <!-- Second Activity intent extras VALUE -->
    <string name="SAVED_TIMETABLES_INTENT">saved_timetable_intent</string>
    <string name="ABOUT_APP_INTENT">about_app_intent</string>
    <string name="ADD_NEW_TASK_INTENT">add_new_task_intent</string>
    <string name="TASK_DETAIL_INTENT">task_detail_intent</string>
    <string name="ADD_NEW_PROJECT_INTENT">add_new_project</string>
    <string name="SHOW_COMPLETED_TASKS_INTENT">show_completed_tasks</string>
</resources>