<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/edit_timetable"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/timetable_detail_editdialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorBlack"
        android:hint="@string/add_title"
        android:inputType="textCapSentences"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorDarkGray"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/timetable_detail_editdialog_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timetable_detail_editdialog_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/colorBlack"
        android:hint="@string/add_description"
        android:inputType="textCapSentences"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorDarkGray"
        tools:ignore="Autofill" />

    <CheckBox
        android:id="@+id/timetable_detail_editdialog_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timetable_detail_editdialog_description"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:buttonTint="@color/colorAccent"
        android:text="@string/main_timetable"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/timetable_detail_editdialog_save_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timetable_detail_editdialog_checkbox"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:minWidth="36dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/timetable_detail_editdialog_cancel_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timetable_detail_editdialog_checkbox"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@id/timetable_detail_editdialog_save_button"
        android:minWidth="36dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

</RelativeLayout>