<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingStart="24dp"
    android:paddingTop="24dp"
    android:paddingEnd="24dp"
    android:paddingBottom="24dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/about_app_fragment_icon"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/omni_task_icon"
            android:src="@drawable/ic_notepad_launcher_icon" />

        <TextView
            android:id="@+id/about_app_fragment_tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_app_fragment_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/about_app_description"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/about_app_fragment_tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_app_fragment_tv1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/about_app_fragment_visit"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/about_app_fragment_tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_app_fragment_tv2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:autoLink="web"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/about_app_weblink"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </RelativeLayout>

</RelativeLayout>